# thermoextrap

./: .buildinfo  .buildinfo.bak  .coverage  .cruft.json  .editorconfig  .gitattributes  .gitignore  .gitmodules  .markdownlint.yaml  .noxconfig.example.toml  .pre-commit-config.yaml  .prettierignore  .pylintrc.toml  .venv  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  Ideal_Gas_Example.ipynb  Ideal_Gas_Example_new.ipynb  Ideal_Gas_Example_xtrapy.ipynb  LICENSE  LICENSE.md  MANIFEST.in  Makefile  NOTES.org  README-1.md  README.md  README.org  README.rst  authors.html  changelog.html  cmomy_integration.ipynb  commands.sh  conftest.py  contributing.html  derivatives.ipynb  (+33 more)
_sources/: changelog.md  index.md  installation.md
_sources/examples/: gpr.md  thermoextrap.md
_sources/reference/: api-public.md  api-public.rst  api-random.rst  index.rst
_static/: documentation_options.js
_static/js/: leave_notice.js  nist-header-footer.js
changelog.d/: 20230424_210709_william.krekelberg.md  20230503_133701_william.krekelberg_module_utilities.md  20230512_152658_william.krekelberg_update_cruft.md  20230615_205223_william.krekelberg_update_pymbar.md  20230810_161249_jacob.monroe_multidim_GPs.md  20230818_094613_jacob.monroe_update_gpflow.md  20230825_150347_william.krekelberg_update_cruft.md  20250218_092857_wpk_update_cmomy_dep.md  README.txt
changelog.d/auto-changelog/: macros.jinja2
changelog.d/templates/: new_fragment.md.j2
cmomy/: __init__.py  _docstrings.py  _resample.py  _testing.py  _typing.py  _version.py  abstract_central.py  accumulator.py  accumulator_central.py  array.py  cached_decorators.py  central-1.py  central-orig.py  central.py  central_BACKUP_37090.py  compile.py  convert.py  options.py  pusher_interface.py  pushers.py  resample.py  statsarray.py  utils.py  xcentral.py  xcentral2.py
cmomy/tests/: _oldtest_general.py  conftest.py  test_central.py  test_central_2.py  test_convert.py  test_resample.py  test_verify.py
config/: README.md  nbval.ini  recipe-append.yaml  userconfig.example.toml
docs/: Makefile  api.rst  api_autosummary.rst  authors.md  conf.py  contributing.md  demo.ipynb  examples-gpr.md  examples.md  examples.rst  index.md  index.rst  installation.md  installation.rst  make.bat  motivation.ipynb  navigation.md  spelling_wordlist.txt  usage.rst  usage_notebook.ipynb
docs/_templates/: class-individual-pages.rst  class-single-page.rst  custom-class.rst  custom-module-single.rst  custom-module-template.rst  custom-module.rst  layout.html  module-custom-imported.rst  module-custom.rst  module-single.rst  (+1 more)
environment/: base.yaml  conda-spec.txt  dev-extras.yaml  dev.yaml  dist-conda.yaml  dist-pypi.txt  dist-pypi.yaml  docs-extras.yaml  docs.yaml  lint-extras.yaml  lint.yaml  py310-dev-base.yaml  py310-dev-complete.yaml  py310-dev.yaml  py310-dist-conda.yaml  py310-dist-pypi.yaml  py310-docs.yaml  py310-test-extras.yaml  py310-test.yaml  py310-typing.yaml  py311-test-extras.yaml  py311-test.yaml  py311-typing.yaml  py38-test-extras.yaml  py38-test.yaml  py38-typing.yaml  py39-test-extras.yaml  py39-test.yaml  py39-typing.yaml  test-extras.txt  test-extras.yaml  test.yaml  tools.yaml  typing.yaml
examples/: README.md  Untitled.ipynb  bootstrap.ipynb  central_moments.ipynb  example_usage.ipynb  gpr.html  index.html  parallel_test.ipynb  test_accumulator.ipynb  thermo-extrap.html  thermoextrap.html
libextrap/: extrap.py  ig.py  interp.py  recursive_interp.py  reweight.py
notebooks/: Customized_Derivatives.ipynb  Data_Organization.ipynb  Ideal_Gas_Example.ipynb  Ideal_Gas_Example_xtrapy.ipynb  Macrostate_Dist_Extrap.ipynb  Temperature_Extrap_Case1.ipynb  Temperature_Extrap_Case2.ipynb  Temperature_Extrap_Case3.ipynb  Temperature_Extrap_Case4.ipynb  Temperature_Interp.ipynb  Test_System_Ideal_Gas.ipynb  Untitled.ipynb  adaptive_interp_check.ipynb  cmomy_integration-1.ipynb  gpr_testing-new.ipynb  lnPi_rework_demo.ipynb  playaround.ipynb  recursive_check.ipynb  recursive_check_new.ipynb  stacking_data.ipynb  wrapping_data_dimensions.ipynb  xpan_vol.ipynb  xtrapy-1.ipynb
reference/: api-baseclasses.html  api-gpr.html  api-modules.html  api-public.html  api-random.html  index.html
requirements/: build.txt  dev-base.txt  dev-complete.txt  dev.txt  dist-pypi.txt  docs.txt  pipxrun-tools.txt  py310-dev-base.yaml  py310-dev-complete.yaml  py310-dist-conda.yaml  py310-dist-pypi.yaml  py310-docs.yaml  py310-test-extras.yaml  py310-test.yaml  py310-typing.yaml  py311-dev-complete.yaml  py311-dev.yaml  py311-docs.yaml  py311-test-extras.yaml  py311-test-notebook.yaml  py311-test.yaml  py311-typing.yaml  py312-dev.yaml  py312-test-extras.yaml  py312-test.yaml  py312-typing.yaml  py38-test-extras.yaml  py38-test.yaml  py38-typing.yaml  py39-test-extras.yaml  py39-test.yaml  py39-typing.yaml  test-extras.txt  test-notebook.txt  test.txt  typing.txt  uv.toml  uvxrun-tools.txt
scripts/: dist-conda.mk  dist-pypi.mk  docs-examples-symlinks.sh  lint.mk  recipe-append.sh  run-prettier.sh  tox-ipykernel-display-name.sh
test_dist/: environment-test-conda.yml  environment-test-pip.yml
tests/: _attemptatfixtures_xtrapy_data2.py  _oldtest_central.py  _oldtest_convert.py  _oldtest_cov.py  _oldtest_general.py  _oldtest_resample.py  _oldtest_xcentral.py  conftest.py  runtest_thermoextrap.py  test_GPs.py  test_active.py  test_beta.py  test_central.py  test_convert.py  test_cov.py  test_data.py  test_gps.py  test_idealgas.py  test_import.py  test_lnPi.py  test_resample.py  test_stack.py  test_u_data.py  test_u_equations.py  test_volume.py  test_xcentral.py  test_xstack.py  test_xtrapy_data.py  test_xtrapy_xpan_beta.py  test_xtrapy_xpan_vol.py  tmp_RunningStats.py
thermoextrap/: __init__.py  adaptive_interp.py  beta.py  extrap.py  gpr_stack.py  ig.py  interp.py  lnpi.py  old_scripts.py  recursive_interp.py  reweight.py  utilities.py  volume.py  volume_idealgas.py
tools/: __init__.py  clean_kernelspec.py  common_utils.py  create_pythons.py  dataclass_parser.py  noxtools.py  pipxrun.py  projectconfig.py  uvxrun.py
(+263 files in other folders)
