[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-fancy-pypi-readme",
    "hatch-vcs",
    "hatchling",
]

[project]
name = "thermoextrap"
description = "Thermodynamic extrapolation"
keywords = [
    "thermoextrap",
]
license = { text = "NIST-PD" }
license-files = { paths = [
    "LICENSE",
] }
authors = [
    { name = "Jacob Monroe", email = "jacob.monroe@nist.gov" },
    { name = "William Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.9,<3.13"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dynamic = [
    "readme",
    "version",
]
dependencies = [
    "attrs>=24.1.0",
    "cmomy>=0.24.0",
    "lazy-loader",
    "module-utilities[inherit]>=0.2",
    "numba==0.60.0",
    "numpy>=1.26.0",
    "scipy",
    "sympy",
    "xarray>=2024.7.0",
]
optional-dependencies.accel = [
    "bottleneck",
]
optional-dependencies.all = [
    "thermoextrap[mbar,gpr,accel,parallel,viz]",
]
optional-dependencies.dev = [
    "thermoextrap[dev-extras,test,typing,uvxrun,mypy,nbval,accel,viz,gpr,mbar,parallel]",
]
optional-dependencies.dev-complete = [
    "thermoextrap[dev,tools]",
]
optional-dependencies.dev-extras = [
    "ipykernel",
    "ipython",
    "nbclient>=0.10.0",
    "nox>=2024.4.15",
    "pytest-accept",
]
optional-dependencies.docs = [
    "autodocsumm",
    "myst-nb",
    "pyenchant",
    "sphinx>=5.3.0",
    "sphinx-autobuild",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinxcontrib-spelling",
    "thermoextrap[gpr,mbar,viz]",
]
optional-dependencies.gpr = [
    "gpflow>=2.6.0",
    "tensorflow>=2.13",
    "tensorflow-probability[tf]",
]
optional-dependencies.mbar = [
    # NOTE: Getting all sorts of errors with pymbar with jax.  This seems to fix them for now...
    "jax[cpu]<0.4.25",
    "pymbar>=4.0",
]
optional-dependencies.mypy = [
    "mypy>=1.11.2",
]
optional-dependencies.nbval = [
    "nbval",
]
optional-dependencies.openmm = [
    "openmm",
]
optional-dependencies.parallel = [
    "dask[complete]",
]
optional-dependencies.test = [
    "pandas",
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "pytest-xdist>3.6.0",
    "thermoextrap[mbar,gpr]",
]
optional-dependencies.tools = [
    "pre-commit",
    "scriv",
]
optional-dependencies.typing = [
    "pandas-stubs",
    "pytest",
    "thermoextrap[uvxrun,mbar,gpr]",
]
optional-dependencies.uvxrun = [
    # Anything needed to run tools/uvxrun.py
    "packaging",
]
optional-dependencies.uvxrun-tools = [
    # these used solely for specking tools to be used with tools/uvxrun.py
    "conda-lock>=2.5.5",
    "grayskull>=2.5.3",
    "nbqa>=1.8.4",
    "pyright>=1.1.380",
    "thermoextrap[mypy]",
    "twine>=5.0.0",
]
optional-dependencies.viz = [
    "matplotlib",
]
urls.Documentation = "https://pages.nist.gov/thermoextrap/"
urls.Homepage = "https://github.com/usnistgov/thermoextrap"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
    ".*_cache",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "examples",
    "docs",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
    { path = "README.md" },
    { path = "CHANGELOG.md" },
    { path = "LICENSE" },
]

# * Linting --------------------------------------------------------------------

[tool.ruff]
line-length = 88
extend-include = [
    "*.ipynb",
]
extend-exclude = [
    ".numba_cache",
    ".venv",
    "dist-conda",
    "examples/gpr_active_learning",
    "src/thermoextrap/legacy/",
    # "tests/",
    # "src/{{ cookiecutter.project_slug }}/tests",
]
fix = true
unsafe-fixes = true

format.docstring-code-format = true
lint.select = [
    "ALL",
]
lint.ignore = [
    # * Annotations
    "ANN101", # - Leads to issues with methods and self
    "ANN102", # - Leads to issues with classmethods and cls
    "ANN401", # - Any ok sometimes
    # * These conflict with formatter
    "COM", # - flake8-commas, formatter should take care of this?
    "CPY", # - Don't require copyright
    # * Docstrings
    "D105", # - Missing magic method docstring
    # * Not a fan of these.  And lead to issues with docfiller
    "D107", # - Missing docstring in __init__
    "D203", # - 1 blank line required before class docstring
    "D205", # - blank line after summary
    "D212", # - Multi-line docstring summary should start at the first line
    # * This leads to errors with placing titles in module
    "D400", # - First line should end with a period
    "D401", # - First line of docstring should be in imperative mood: "{first_line}"
    "D415", # - First line should end with a period, question mark, or exclamation point
    "D417", # - Missing argument description in the docstring for {definition}: {name} (bad with docfiller)
    "E402", # - module level import not at top of file
    # * Other
    "E501", # - line too long - let formatter fix this
    "E731", # - do not assign a lambda expression, use a def
    "FBT",  # - bools are ok
    "ISC",  # - flake8-implicit-str-concat
    # * Allow non top level imports
    "PLC0415", # - import should be at top level (leads to issues with imports in func?)
    "TID252",  # - Allow relative imports
]
# Use extend-ignore for project specific ignores (avoid changing ignore directly)
lint.extend-ignore = [
    # "NPY",       # - not using numpy?
    # * Annotations
    # "SLF001",  # - flake8-self (private access sometimes OK)
    "ANN", # - Annotations (just use mypy/pyright)
    # "PLR0913", # - complexity sometimes ok
    # "PLR0917", # - complexity sometimes ok
    # * Docstrings ymmv
    # "D102",    # - Missing docstring in public method
    # "D103",    # - Missing docstring in public function
    # "D202",    # - blank line after docstring
    "DOC201", # - Missing return from documentation
    "DOC202", # - Missing return from documentation
    "DOC402",
    "DOC501", # - Missing raises from documentation
    "ERA",    # - eradicate (want to keep some stuff)
    "NPY",    # - not using numpy?
    "PD",     # - not using pandas?
    # * pylint
    "PLR2004", # - numbers in comparison sometimes ok
]
lint.per-file-ignores."**/*.ipynb" = [
    "B018",
    "D100",
    "E302",
    "E305",
    "INP001",
]
lint.per-file-ignores."docs/conf.py" = [
    "D102",
    "ERA",
    "INP001",
    "N801",
]
lint.per-file-ignores."noxfile.py" = [
    "RUF009",
]

lint.per-file-ignores."tests/*.py" = [
    "D",
    "PLR0914",
    "PT011",
    "S101",
    "SLF001",
]
lint.per-file-ignores."tools/*.py" = [
    "A",
    "D102",
    "DOC402",
    "S",
    "SLF001",
]
# TODO(wpk): fix these...
lint.extend-per-file-ignores."**/*.ipynb" = [
    "ARG001",
    "ARG002",
    "D",
    "N801",
    "N802",
    "N803",
    "N806",
    "N816",
    "PLR6104",
    "PTH111",
    "PTH207",
    "T201",
]

# for now...
lint.extend-per-file-ignores."**/*.py" = [
    "UP031",
]
lint.extend-per-file-ignores."**/_attrs_utils.py" = [ "A002", "ARG001" ]
lint.extend-per-file-ignores."**/adaptive_interp.py" = [ "T201" ]
lint.extend-per-file-ignores."**/beta.py" = [ "A003", "ARG002", "D102", "N801" ]
lint.extend-per-file-ignores."**/data*.py" = [
    "D102",
]
lint.extend-per-file-ignores."**/gpr_active/*.py" = [
    "ARG002",
    "D102",
    "D103",
    "FA100",
    "N802",
    "N803",
    "N806",
    "PLR0914",
    "PLR6301",
]
lint.extend-per-file-ignores."**/lnpi.py" = [
    "A003",
    "ARG002",
    "D102",
    "N801",
    "N802",
    "N815",
]
lint.extend-per-file-ignores."**/models.py" = [
    "A003",
    "ARG002",
    "D102",
    "N803",
    "N815",
]
lint.extend-per-file-ignores."**/stack.py" = [
    "D102",
]
lint.extend-per-file-ignores."**/thermoextrap/random.py" = [ "A005" ]
lint.extend-per-file-ignores."**/typing.py" = [ "A005" ]
lint.extend-per-file-ignores."**/volume*.py" = [
    "D102",
]
lint.extend-per-file-ignores."conftest.py" = [
    "D103",
]
lint.extend-per-file-ignores."examples/usage/gpr/**/*.ipynb" = [
    "B008",
    "FA100",
    "PERF203",
    "PERF401",
    "PLR0911",
    "PLR6301",
]
lint.extend-per-file-ignores."src/**/*.py" = [
    "FIX002",
    "TD003",
]
# Project specific ignores (avoid changing per-file-ignores directly)
lint.extend-per-file-ignores."tests/test_lnPi.py" = [
    "N999",
]
# fixable = ["ALL"]
lint.unfixable = [
    "ERA",
    "PLR6104",
    "T",
]
# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
lint.isort.known-first-party = [
    "thermoextrap",
]
lint.pydocstyle.convention = "numpy"
lint.pylint.max-args = 15
lint.pylint.max-positional-args = 15
lint.pylint.max-public-methods = 30
lint.preview = true

[tool.nbqa.exclude]
ruff = "^examples/gpr_active_learning|^examples/usage/gpr"

[tool.codespell]
skip = "examples/*"

[tool.check-wheel-contents]
toplevel = [
    "thermoextrap",
]
src_dir = [
    "src",
]

# * Testing --------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=*.md",
    "--pyargs",
    "--cov-config=pyproject.toml",
    "--ignore-glob='**/legacy/**",
    "-n",
    "4",
]
testpaths = [
    "README.md",
    "tests",
    "thermoextrap",
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
# show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@overload",
]
omit = [
    "*/vendored/*",
    "*/_typing.py",
]
include = [
    "src/*",
]

[tool.coverage.paths]
source = [
    "src/",
    ".nox/**/site-packages/",
]

# * Typing ---------------------------------------------------------------------

[tool.mypy]
files = [
    "src",
    "tests",
]
show_error_codes = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    ".eggs",
    ".tox",
    ".nox",
    ".venv",
    ".numba_cache",
    "docs",
]
check_untyped_defs = true
# strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
]

[[tool.mypy.overrides]]
ignore_errors = true
module = [
]

[tool.pyright]
include = [
    "src",
    "tests",
]
exclude = [
    "**/__pycache__",
    ".tox/**",
    ".nox/**",
    ".venv/**",
    "**/.mypy_cache",
    "**/.numba_cache",
    "**/thermoextrap/legacy/*.py",
]
# strict = ["src", "tests", "noxfile.py", "tools/*.py"]
strict = [
    "noxfile.py",
    "tools/*.py",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# enable subset of "strict"
reportDuplicateImport = true
reportInvalidStubStatement = true
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUntypedNamedTuple = true
reportUnusedImport = true
# disable subset of "basic"
reportGeneralTypeIssues = false
reportMissingModuleSource = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalMemberAccess = false
reportOptionalOperand = false
reportOptionalSubscript = false
reportPrivateImportUsage = false
reportUnboundVariable = false

[tool.pytype]
inputs = [
    "src",
    "tests",
]

# * Dependency creation --------------------------------------------------------

[tool.pyproject2conda]
user_config = "config/userconfig.toml"
template_python = "requirements/py{py}-{env}"
template = "requirements/{env}"
python = [
    "3.11",
]
channels = [
    "conda-forge",
]
style = [
    "yaml",
    "requirements",
]
default_envs = [
    "test",
    "typing",
    "docs",
    "dev",
    "dev-complete",
]

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }
scriv = { pip = true }
dask = { skip = true, packages = "dask" }
matplotlib = { skip = true, packages = "matplotlib-base" }
gpflow = { pip = true }
tensorflow = { pip = true }
tensorflow-probability = { pip = true }
pymbar = { pip = true }
jax = { pip = true }
jaxlib = { pip = true }
module-utilities = { packages = "docstring-inheritance" }
lazy-loader = { skip = true, packages = "lazy_loader" }

[tool.pyproject2conda.envs.build]
extras = "build-system.requires"
reqs = [
    "build",
]
skip_package = true
style = "requirements"

[tool.pyproject2conda.envs.uvxrun-tools]
extras = "uvxrun-tools"
skip_package = true
style = "requirements"

[tool.pyproject2conda.envs.test-extras]
extras = [
    "test",
]
skip_package = true

[tool.pyproject2conda.envs.test-notebook]
extras = [
    "test",
    "nbval",
    "viz",
]

[[tool.pyproject2conda.overrides]]
# Ensure these have pip in yaml file
envs = [
    "test",
    "docs",
    "dev",
    "dev-complete",
]
deps = [
    "pip",
]

[[tool.pyproject2conda.overrides]]
envs = [
    "test",
    "typing",
    "test-extras",
]
python = [
    "3.9",
    "3.10",
    "3.11",
    "3.12",
]

# * pip-tools (keeping for legacy) ---------------------------------------------

[tool.pip-tools]
allow-unsafe = true
strip-extras = true

# * uv -------------------------------------------------------------------------

[tool.uv]
managed = false

[tool.uv.pip]
annotation-style = "line"

# * Other tools ----------------------------------------------------------------

[tool.scriv]
format = "md"
md_header_level = "2"
new_fragment_template = "file: changelog.d/templates/new_fragment.md.j2"

[tool.commitizen]
use_shortcuts = true

[tool.cruft]
