[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-fancy-pypi-readme",
    "hatch-vcs",
    "hatchling",
]

[project]
name = "thermoextrap"
description = "Thermodynamic extrapolation"
keywords = [
    "thermoextrap",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "Jacob Monroe", email = "jacob.monroe@nist.gov" },
    { name = "William Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dynamic = [
    "readme",
    "version",
]
dependencies = [
    "attrs>=24.1.0",
    "cmomy>=0.24.0",
    "dm-tree<0.1.9",
    "lazy-loader",
    "module-utilities[inherit]>=0.2",
    "numba>=0.60.0",
    "numpy>=1.26.0",
    "scipy",
    "sympy",
    "xarray>=2024.7.0",
]
optional-dependencies.accel = [
    "bottleneck",
]
optional-dependencies.all = [
    "thermoextrap[mbar,gpr,accel,parallel,viz]",
]
optional-dependencies.gpr = [
    "gpflow>=2.6.0",
    "tensorflow>=2.13",
    "tensorflow-probability[tf]>0.23.0,<0.25.0",
]
optional-dependencies.mbar = [
    # NOTE: Getting all sorts of errors with pymbar with jax.  This seems to fix them for now...
    "jax[cpu]<0.4.25",
    "pymbar>=4.0",
]
optional-dependencies.openmm = [
    "openmm",
]
optional-dependencies.parallel = [
    "dask[complete]",
]
optional-dependencies.viz = [
    "matplotlib",
]
urls.Documentation = "https://pages.nist.gov/thermoextrap/"
urls.Homepage = "https://github.com/usnistgov/thermoextrap"

[dependency-groups]
dev = [
    "thermoextrap[all]",
    { include-group = "dev-extras" },
    { include-group = "mypy" },
    { include-group = "nbval" },
    { include-group = "test" },
    { include-group = "typing" },
    { include-group = "uvxrun" },
]
test = [
    { include-group = "test-extras" },
]
docs = [
    "autodocsumm",
    "myst-nb",
    "pyenchant",
    "sphinx>=5.3.0",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinxcontrib-spelling",
    "thermoextrap[gpr,mbar,viz]",
]
cog = [ "cogapp" ]
dev-extras = [
    "ipykernel",
    "ipython",
    "nbclient>=0.10.0",
    "nox>=2024.4.15",
    "pytest-accept",
]
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
mypy = [ "mypy>=1.15.0" ]
nbval = [ "nbclient>=0.10.0", "nbval" ]
test-extras = [
    "pandas",
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "pytest-xdist>3.6.0",
    "thermoextrap[mbar,gpr]",
]
test-notebook = [
    "thermoextrap[viz]",
    { include-group = "nbval" },
    { include-group = "test-extras" },
]
typing = [
    "pandas-stubs",
    "pylint",
    "pytest",
    "thermoextrap[mbar,gpr]",
    { include-group = "uvxrun" },
]
# Anything needed to run tools/uvxrun.py
# NOTE: uvxrun-tools defined explicitly in tool.pyproject2conda.envs.uvxrun-tools
uvxrun = [ "packaging" ]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
    ".*_cache",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "examples",
    "docs",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
    { path = "README.md" },
    { path = "CHANGELOG.md" },
    { path = "LICENSE" },
]

[tool.nbqa.exclude]
ruff = "^examples/gpr_active_learning|^examples/usage/gpr"

[tool.codespell]
skip = "examples/*"

[tool.check-wheel-contents]
toplevel = [
    "thermoextrap",
]
src_dir = [
    "src",
]

[tool.pyproject-fmt]
# tensorflow max allowed python version (for now).
max_supported_python = "3.12"

# * Testing --------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=*.md",
    "--pyargs",
    "--cov-config=pyproject.toml",
    "--ignore-glob='**/legacy/**",
    "-n",
    "4",
]
testpaths = [
    "README.md",
    "tests",
    "thermoextrap",
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
# show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@overload",
]
omit = [
    "*/vendored/*",
    "*/_typing.py",
]
include = [
    "src/*",
]

[tool.coverage.paths]
source = [
    "src/",
    ".nox/**/site-packages/",
]

# * Typing ---------------------------------------------------------------------

[tool.mypy]
files = [
    "src",
    "tests",
]
show_error_codes = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    ".eggs",
    ".tox",
    ".nox",
    ".venv",
    ".numba_cache",
    "docs",
]
check_untyped_defs = true
# strict = true

# [[tool.mypy.overrides]]
# ignore_missing_imports = true
# module = [
# ]

# [[tool.mypy.overrides]]
# ignore_errors = true
# module = [
# ]

[tool.pyright]
include = [
    "src",
    "tests",
]
exclude = [
    "**/__pycache__",
    ".tox/**",
    ".nox/**",
    ".venv/**",
    "**/.mypy_cache",
    "**/.numba_cache",
    "**/thermoextrap/legacy/*.py",
]
# strict = ["src", "tests", "noxfile.py", "tools/*.py"]
strict = [
    "noxfile.py",
    "tools/*.py",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# enable subset of "strict"
reportDuplicateImport = true
reportInvalidStubStatement = true
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUntypedNamedTuple = true
reportUnusedImport = true
# disable subset of "basic"
reportGeneralTypeIssues = false
reportMissingModuleSource = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalMemberAccess = false
reportOptionalOperand = false
reportOptionalSubscript = false
reportPrivateImportUsage = false
reportUnboundVariable = false

[tool.pytype]
inputs = [
    "src",
    "tests",
]

# * Dependency creation --------------------------------------------------------

[tool.pyproject2conda]
user_config = "config/userconfig.toml"
template_python = "requirements/py{py}-{env}"
template = "requirements/{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }
matplotlib = { skip = true, packages = "matplotlib-base" }
lazy-loader = { skip = true, packages = "lazy_loader" }
dask = { skip = true, packages = "dask" }
gpflow = { pip = true }
tensorflow = { pip = true }
tensorflow-probability = { pip = true }
pymbar = { pip = true }
jax = { pip = true }
jaxlib = { pip = true }
module-utilities = { packages = "docstring-inheritance" }

[tool.pyproject2conda.envs.dev]
groups = [ "dev" ]
python = "default"

[tool.pyproject2conda.envs.test]
groups = [ "test" ]
python = "all"

[tool.pyproject2conda.envs.uvxrun-tools]
# define these here so they don't override deps in uv.lock
reqs = [
    # these used solely for specking tools to be used with tools/uvxrun.py
    "conda-lock>=2.5.5",
    "grayskull>=2.5.3",
    "nbqa>=1.8.4",
    "pre-commit",
    "pyright>=1.1.392",
    "scriv",
    "twine>=5.0.0",
]
groups = [ "mypy" ]
skip_package = true
style = "requirements"

[tool.pyproject2conda.envs.test-extras]
groups = [ "test-extras" ]
skip_package = true
python = "all"

# * uv -------------------------------------------------------------------------

[tool.uv]
managed = true
default-groups = [ "dev" ]
fork-strategy = "requires-python"
required-version = ">=0.5.21"

[tool.uv.pip]
annotation-style = "line"

# * Other tools ----------------------------------------------------------------

[tool.scriv]
format = "md"
md_header_level = "2"
new_fragment_template = "file: changelog.d/templates/new_fragment.md.j2"

[tool.commitizen]
use_shortcuts = true

[tool.cruft]

[tool.typos.files]
extend-exclude = [ "spelling_wordlist.txt" ]

[tool.typos.default]
extend-ignore-identifiers-re = [
    "struc_.*",
    ".*equil.*",
]

[tool.typos.default.extend-identifiers]
gather_nd = "gather_nd"
numer = "numer"
pertNumer = "pertNumer"
