[metadata]
name = cmomy
author = William P. Krekelberg
author_email = wpk@nist.gov
license= NIST license
license_files = LICENSE
description = Central (co)moment calculation/manipulation
# if using markdown
# long_description_content_type = text/markdown
long_description = file: README.rst, HISTORY.rst, LICENSE
keywords = cmomy
url = https://github.com/wpk-nist-gov/cmomy
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: Public Domain
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering



[options]
packages = find:
zip_safe = True # if using mypy, must be False
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy >= 1.20
    numba >= 0.50
    xarray >= 0.16
    typing-extensions
    custom-inherit


[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules
testpaths = cmomy/tests cmomy
# testpaths = cmomy/tests

# [tool:docformatter]
# recursive = true
# in-place = true

[isort]
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
known_first_party = cmomy

[flake8]
docstring-convention = numpy
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
    D202 # allow black line after docstring
    D105
    D205
    D400
    D401

[mypy]
exclude = properties|asv_bench|doc
files = .
show_error_codes = True
warn_return_any = True
warn_unused_configs = True
# plugins = numpy.typing.mypy_plugin

# Most of the numerical computing stack doesn't have type annotations yet.
[mypy-numpy.*]
ignore_missing_imports = True
[mypy-bottleneck.*]
ignore_missing_imports = True
[mypy-dask.*]
ignore_missing_imports = True
[mypy-netCDF4.*]
ignore_missing_imports = True
[mypy-pandas.*]
ignore_missing_imports = True
[mypy-pytest.*]
ignore_missing_imports = True
[mypy-scipy.*]
ignore_missing_imports = True
[mypy-setuptools]
ignore_missing_imports = True
[mypy-numba.*]
ignore_missing_imports = True

# version spanning code is hard to type annotate (and most of this module will
# be going away soon anyways)

exclude=
    .eggs
    doc
    docs
