# TODO : remove all of this when I can
#
# For now, need metadata.url and options.* (as well as setup.py)
# to make grayskull correctly parse the repo for a recipe.
# That's the only reason.  When grayskull better handles [tool.setuptools]
# in pyproject.toml, I'll remove those sections, and `setup.py`.
#
#
# * I need metadata.url to get the homepage correct in the generated meta.yaml
#
# * I need options.* to get the subpackages (lnpy and lnPi) correctly
# * This is due to the project `tmmc-lnpy` being different to the package(s).
#
#
# * flake8 doesn't support pyproject.toml
#
[metadata]
url = https://github.com/usnistgov/thermoextrap

[options]
packages = find_namespace:
package_dir=
    =src
include_package_data = True
zip_safe = True # if using mypy, must be False

[options.packages.find]
where=src

[flake8]
docstring-convention = numpy
extend-ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    # module level import not at top of file
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
    # allow black line after docstring
    D202
    D105
    D205
    D400
    D401
    D102
    D103
