# TODO : remove all of this when I can
#
# For now, need metadata.url and options.* (as well as setup.py)
# to make grayskull correctly parse the repo for a recipe.
# That's the only reason.  When grayskull better handles [tool.setuptools]
# in pyproject.toml, I'll remove those sections, and `setup.py`.
#
#
# * I need metadata.url to get the homepage correct in the generated meta.yaml
#
# * I need options.* to get the subpackages (lnpy and lnPi) correctly
# * This is due to the project `tmmc-lnpy` being different to the package(s).

[metadata]
url = https://github.com/usnistgov/thermoextrap
license_files = LICENSE

[options]
packages = find_namespace:
package_dir=
    =src
include_package_data = True
zip_safe = True # if using mypy, must be False

[options.packages.find]
where=src
